ray_tracer/_build/_log
### Starting build.
# Target: /home/induaditya/.opam/5.1.0/bin/ocamlc.opt -config, tags: {  }
/home/induaditya/.opam/5.1.0/bin/ocamlc.opt -config
# Target: combined.ml.depends, tags: { extension:ml, file:combined.ml, ocaml, ocamldep, quiet }
/home/induaditya/.opam/5.1.0/bin/ocamldep.opt -modules combined.ml > combined.ml.depends
# Target: combined.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:combined.cmo, file:combined.ml, implem, ocaml, quiet }
/home/induaditya/.opam/5.1.0/bin/ocamlc.opt -c -I /home/induaditya/.opam/5.1.0/lib/graphics -o combined.cmo combined.ml
+ /home/induaditya/.opam/5.1.0/bin/ocamlc.opt -c -I /home/induaditya/.opam/5.1.0/lib/graphics -o combined.cmo combined.ml
File "combined.ml", line 43, characters 9-21:
43 | let bare (Some p) = p;;
              ^^^^^^^^^^^^
Warning 8 [partial-match]: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
None

File "combined.ml", line 323, characters 18-31:
323 |     let parlist = Parmap.parmap ~ncores:4 (shader o 1. infinity ls ll ) (Parmap.L coordinates) in 
                        ^^^^^^^^^^^^^
Error: Unbound module Parmap
Command exited with code 2.
# Compilation unsuccessful.
